# hypervisor

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  TODO.md  azure-pipelines.yml  configure  loop.sh  mkdocs.yml
bfdummy/: CMakeLists.txt
bfdummy/src/: main.cpp
bfintrinsics/: CMakeLists.txt
bfintrinsics/include/: intrinsics.h
bfintrinsics/include/arch/intel_x64/: cache.h  cpuid.h  crs.h  drs.h  ept.h  gdt.h  idt.h  misc.h  msrs.h  paging.h  pause.h  pm.h  portio.h  rflags.h  srs.h  vmx.h
bfintrinsics/include/arch/x64/: cache.h  cpuid.h  misc.h  msrs.h  paging.h  portio.h  rflags.h
bfintrinsics/src/arch/intel_x64/: cpuid.S  drs.S  gdt.S  idt.S  msrs.S  pm.S  rflags.S  srs.S  vmx.S  vmx.asm
bfm/: CMakeLists.txt
bfm/include/: ioctl.h  ioctl_driver.h
bfm/src/: ioctl_driver.cpp  main.cpp
bfm/src/arch/test/: ioctl.cpp
bfm/src/arch/windows/: ioctl_private.cpp
bfm/src/platform/linux/: ioctl.cpp
bfm/tests/: test_ioctl_driver.cpp  test_support.h
docs/: index.md  (+5 more)
example/rdtsc/: CMakeLists.txt  main.cpp
example/rdtsc/arm/: common_arch_support.hpp
example/rdtsc/arm/aarch64/: arch_support.hpp
example/rdtsc/x64/: common_arch_support.hpp  intrinsic_cpuid.S  intrinsic_cpuid.hpp  intrinsic_rdtsc.S  intrinsic_rdtsc.hpp  intrinsic_rdtscp.S  intrinsic_rdtscp.hpp
example/rdtsc/x64/amd/: arch_support.hpp
example/rdtsc/x64/intel/: arch_support.hpp
kernel/test/: .clang-tidy  CMakeLists.txt  dispatch_esr_nmi.hpp  dispatch_esr_page_fault.hpp  dispatch_syscall_callback_op.hpp  dispatch_syscall_control_op.hpp  dispatch_syscall_debug_op.hpp  dispatch_syscall_handle_op.hpp  dispatch_syscall_intrinsic_op.hpp  dispatch_syscall_mem_op.hpp  dispatch_syscall_vm_op.hpp  dispatch_syscall_vp_op.hpp  dispatch_syscall_vps_op.hpp  ext_pool_t_base.hpp  ext_pool_t_signal_vm_created_failure.hpp  ext_pool_t_signal_vm_destroyed_failure.hpp  ext_pool_t_success.hpp  vm_pool_t_base.hpp  vm_pool_t_failure.hpp  vm_pool_t_success.hpp  vm_t_allocate_failure.hpp  vm_t_base.hpp  vm_t_deallocate_failure.hpp  vm_t_initialize_and_release_failure.hpp  vm_t_initialize_failure.hpp  vm_t_release_failure.hpp  vm_t_set_active_failure.hpp  vm_t_set_inactive_failure.hpp  vm_t_success.hpp  vp_pool_t_base.hpp  vp_pool_t_failure.hpp  vp_pool_t_success.hpp  vp_pool_t_vmid0_assigned.hpp  vp_t_allocate_failure.hpp  vp_t_base.hpp  vp_t_deallocate_failure.hpp  vp_t_initialize_and_release_failure.hpp  vp_t_initialize_failure.hpp  vp_t_migrate_failure.hpp  vp_t_release_failure.hpp  (+7 more)
kernel/test/call_ext/: behavior.cpp  requirements.cpp
kernel/test/common_platform/: dispatch_esr_nmi.hpp  dispatch_esr_page_fault.hpp  dispatch_syscall_callback_op.hpp  dispatch_syscall_control_op.hpp  dispatch_syscall_debug_op.hpp  dispatch_syscall_handle_op.hpp  dispatch_syscall_intrinsic_op.hpp  dispatch_syscall_mem_op.hpp  dispatch_syscall_vm_op.hpp  dispatch_syscall_vp_op.hpp  dispatch_syscall_vps_op.hpp  dummy_errc_types.hpp  dummy_lock_t.hpp  dummy_vm_t.hpp  dummy_vp_pool_t.hpp  dummy_vp_t.hpp  dummy_vps_pool_t.hpp
kernel/test/common_platform/bfelf/: elf64_ehdr_t.hpp  elf64_phdr_t.hpp
kernel/test/debug_ring_write/: behavior.cpp  requirements.cpp
kernel/test/dispatch_esr_page_fault/: behavior.cpp  requirements.cpp
kernel/test/dispatch_syscall/: behavior.cpp  requirements.cpp
kernel/test/dispatch_syscall_callback_op/: behavior.cpp  requirements.cpp
kernel/test/dispatch_syscall_control_op/: behavior.cpp  requirements.cpp
kernel/test/dispatch_syscall_debug_op/: behavior.cpp  requirements.cpp
kernel/test/dispatch_syscall_handle_op/: behavior.cpp  requirements.cpp
kernel/test/dispatch_syscall_mem_op/: behavior.cpp  requirements.cpp
kernel/test/dispatch_syscall_vm_op/: behavior.cpp  requirements.cpp
kernel/test/dispatch_syscall_vp_op/: behavior.cpp  requirements.cpp
kernel/test/dispatch_syscall_vps_op/: behavior.cpp  requirements.cpp
kernel/test/ext_pool_t/: behavior.cpp  requirements.cpp
kernel/test/ext_t/: behavior.cpp  requirements.cpp
kernel/test/fast_fail/: behavior.cpp  requirements.cpp
kernel/test/get_current_tls/: behavior.cpp  requirements.cpp
kernel/test/huge_pool_t/: behavior.cpp  requirements.cpp
kernel/test/huge_t/: behavior.cpp  requirements.cpp
kernel/test/map_page_flags/: behavior.cpp  requirements.cpp
kernel/test/mk_main/: behavior.cpp  requirements.cpp
kernel/test/page_pool_t/: behavior.cpp
kernel/test/page_t/: behavior.cpp  requirements.cpp
kernel/test/promote/: behavior.cpp  requirements.cpp
kernel/test/return_to_mk/: behavior.cpp  requirements.cpp
kernel/test/return_to_vmexit_loop/: requirements.cpp
kernel/test/spinlock_t/: behavior.cpp
kernel/test/vm_pool_t/: behavior.cpp  requirements.cpp
kernel/test/vm_t/: behavior.cpp  requirements.cpp
kernel/test/vmexit_loop/: behavior.cpp  requirements.cpp
kernel/test/vmexit_loop_entry/: behavior.cpp  requirements.cpp
kernel/test/vp_pool_t/: behavior.cpp  requirements.cpp
kernel/test/vp_t/: behavior.cpp  requirements.cpp
kernel/test/vps_pool_t/: behavior.cpp  requirements.cpp
kernel/test/x64/dispatch_esr/: behavior.cpp  requirements.cpp
kernel/test/x64/root_page_table_t/: behavior.cpp  requirements.cpp
kernel/test/x64/smap_guard_t/: behavior.cpp  requirements.cpp
runtime/: CMakeLists.txt
runtime/include/bsl/: cstdio.hpp
runtime/include/bsl/details/: print_thread_id.hpp
runtime/mocks/bsl/: cstdio.hpp
runtime/src/: _start.S  _start.cpp
runtime/src/arm/aarch64/: _start.S
runtime/src/bsl/details/: print_thread_id.hpp  putc_stderr.hpp  putc_stdout.hpp  puts_stderr.hpp  puts_stdout.hpp
runtime/src/x64/: __stack_chk_fail.S  memcpy.S  memset.S
runtime/test/: .clang-tidy  CMakeLists.txt
runtime/test/mock/memcpy/: behavior.cpp
runtime/test/mock/msg_stack_chk_fail/: CMakeLists.txt
src/bfm/: CMakeLists.txt
src/bfm/details/: main.h
src/bfm/src/: main.cpp
tests/unit/: CMakeLists.txt
tests/unit/bfm/: CMakeLists.txt  test_main.cpp
tests/unit/common/: CMakeLists.txt  test_debugring.cpp
tests/unit/file/: CMakeLists.txt  test_file.cpp
(+1081 files in other folders)
