include(${bsl_SOURCE_DIR}/cmake/function/bf_add_test.cmake)

include_directories(../../loader/include/interface/cpp)
include_directories(../../loader/include/interface/cpp/bfelf)
include_directories(../../syscall/include/cpp)
include_directories(../include)
include_directories(./)
include_directories(../../loader/include/interface/cpp/x64)
include_directories(../include/x64)
include_directories(../include/x64/amd)
include_directories(../include/x64/intel)

add_subdirectory(call_ext)
add_subdirectory(debug_ring_write)
add_subdirectory(dispatch_esr_page_fault)
add_subdirectory(dispatch_syscall)
add_subdirectory(dispatch_syscall_callback_op)
add_subdirectory(dispatch_syscall_control_op)
add_subdirectory(dispatch_syscall_debug_op)
add_subdirectory(dispatch_syscall_handle_op)
add_subdirectory(dispatch_syscall_mem_op)
add_subdirectory(dispatch_syscall_vm_op)
add_subdirectory(dispatch_syscall_vp_op)
add_subdirectory(dispatch_syscall_vps_op)
add_subdirectory(ext_pool_t)
add_subdirectory(ext_t)
add_subdirectory(fast_fail)
add_subdirectory(get_current_tls)
add_subdirectory(huge_pool_t)
add_subdirectory(huge_t)
add_subdirectory(map_page_flags)
add_subdirectory(mk_main)
add_subdirectory(page_pool_t)
add_subdirectory(page_t)
add_subdirectory(promote)
add_subdirectory(return_to_mk)
add_subdirectory(return_to_vmexit_loop)
add_subdirectory(vm_pool_t)
add_subdirectory(vm_t)
add_subdirectory(vmexit_loop)
add_subdirectory(vmexit_loop_entry)
add_subdirectory(vp_pool_t)
add_subdirectory(vp_t)
add_subdirectory(vps_pool_t)
add_subdirectory(x64/dispatch_esr)
add_subdirectory(x64/root_page_table_t)
add_subdirectory(x64/smap_guard_t)
add_subdirectory(x64/amd/dispatch_esr_nmi)
add_subdirectory(x64/amd/dispatch_syscall_intrinsic_op)
add_subdirectory(x64/amd/intrinsic_t)
add_subdirectory(x64/amd/vps_t)
add_subdirectory(x64/intel/dispatch_esr_nmi)
add_subdirectory(x64/intel/dispatch_syscall_intrinsic_op)
add_subdirectory(x64/intel/intrinsic_t)
add_subdirectory(x64/intel/vps_t)
